# grptlk

./: .gitignore  README.md  west.yml
docs/: audio-latency.md  generate_grptlk_audio_binaries.md  grptlk-audio-fully-random.md  grptlk-audio-occupation-aware.md  grptlk-audio-partly-random.md  grptlk_audio_receive_review.md
samples/: generate_grptlk_audio_binaries.sh  simulate.py
samples/bap_broadcast_source/: CMakeLists.txt  prj.conf
samples/bap_broadcast_source/boards/: nrf54l15dk_nrf54l15_cpuapp.conf
samples/bap_broadcast_source/src/: main.c
samples/bap_grptlk_sink/: CMakeLists.txt  prj.conf
samples/bap_grptlk_sink/src/: main.c
samples/bap_grptlk_source/: CMakeLists.txt  prj.conf
samples/bap_grptlk_source/src/: main.c
samples/binaries/: grptlk_bcst_le_audio_playground_10ms_T2_fully_random.hex  grptlk_bcst_le_audio_playground_10ms_T2_occupation_aware.hex  grptlk_bcst_le_audio_playground_10ms_T2_partly_random.hex  grptlk_bcst_le_audio_playground_5ms_liblc3_fully_random.hex  grptlk_bcst_le_audio_playground_5ms_liblc3_occupation_aware.hex  grptlk_bcst_le_audio_playground_5ms_liblc3_partly_random.hex  grptlk_bcst_nrf5340_audio_dk_10ms_G726.hex  grptlk_bcst_nrf5340_audio_dk_10ms_T2_LC3.hex  grptlk_bcst_nrf5340_audio_dk_10ms_T2_fully_random.hex  grptlk_bcst_nrf5340_audio_dk_10ms_T2_occupation_aware.hex  grptlk_bcst_nrf5340_audio_dk_10ms_T2_partly_random.hex  grptlk_bcst_nrf5340_audio_dk_5ms_G726.hex  grptlk_bcst_nrf5340_audio_dk_5ms_Open_LC3.hex  grptlk_bcst_nrf5340_audio_dk_5ms_liblc3_fully_random.hex  grptlk_bcst_nrf5340_audio_dk_5ms_liblc3_occupation_aware.hex  grptlk_bcst_nrf5340_audio_dk_5ms_liblc3_partly_random.hex  grptlk_recv_le_audio_playground_10ms_T2_fully_random.hex  grptlk_recv_le_audio_playground_10ms_T2_partly_random.hex  grptlk_recv_le_audio_playground_5ms_liblc3_fully_random.hex  grptlk_recv_le_audio_playground_5ms_liblc3_partly_random.hex  grptlk_recv_nrf5340_audio_dk_10ms_G726.hex  grptlk_recv_nrf5340_audio_dk_10ms_T2_LC3.hex  grptlk_recv_nrf5340_audio_dk_10ms_T2_fully_random.hex  grptlk_recv_nrf5340_audio_dk_10ms_T2_partly_random.hex  grptlk_recv_nrf5340_audio_dk_5ms_G726.hex  grptlk_recv_nrf5340_audio_dk_5ms_Open_LC3.hex  grptlk_recv_nrf5340_audio_dk_5ms_liblc3_fully_random.hex  grptlk_recv_nrf5340_audio_dk_5ms_liblc3_partly_random.hex
samples/common/: LOG_FORMAT.md
samples/common/include/: grptlk_uplink_stats.h
samples/grptlk_audio_broadcast/: CMakeLists.txt  Kconfig  empty.conf  netcore.conf  prj.conf
samples/grptlk_audio_broadcast_audio_dk/: CMakeLists.txt  Kconfig  prj.conf  sysbuild.cmake
samples/grptlk_audio_broadcast_audio_dk/boards/: nrf5340_audio_dk_nrf5340_cpuapp.overlay
samples/grptlk_audio_broadcast_audio_dk/src/: main.c
samples/grptlk_audio_broadcast_audio_dk/src/drivers/: audio_i2s.c  audio_i2s.h
samples/grptlk_audio_broadcast_hwn001/: CMakeLists.txt  prj.conf
samples/grptlk_audio_receive/: CMakeLists.txt  Kconfig  Kconfig.sysbuild  netcore.conf  prj.conf
samples/grptlk_audio_receive/boards/: hwn001_nrf54l15_cpuapp.conf  hwn001_nrf54l15_cpuapp.overlay  nrf5340_audio_dk_nrf5340_cpuapp.conf  nrf5340_audio_dk_nrf5340_cpuapp.overlay  nrf5340_audio_dk_nrf5340_cpuapp_le_audio_playground.conf  nrf5340_audio_dk_nrf5340_cpuapp_le_audio_playground.overlay  rbv2h_nrf5340_cpuapp.conf  rbv2h_nrf5340_cpuapp.overlay  rbv2h_nrf5340_cpuapp_ns.conf
samples/grptlk_audio_receive/src/: main.c
samples/grptlk_audio_receive/src/audio/: audio.c  audio.h  audio_cs47l63.c  audio_drift.c  audio_drift.h  audio_max9867.c  backend.h
samples/grptlk_audio_receive/src/audio/backends/: cs47l63.c  cs47l63_reg_conf.h  max9867.c  max9867_regs.h
samples/grptlk_audio_receive/src/audio/drivers/: audio_i2s.c  audio_i2s.h  cs47l63_comm.c  cs47l63_comm.h
samples/grptlk_audio_receive/src/audio/sync/: clk_sync.c  clk_sync.h
samples/grptlk_audio_receive/src/codec/: g726_zephyr.h
samples/grptlk_audio_receive/src/drivers/: audio_i2s.c  audio_i2s.h  cs47l63_comm.c  cs47l63_comm.h  cs47l63_reg_conf.h  max9867.c  max9867.h
samples/grptlk_audio_receive/src/io/: Kconfig  audio.h  audio_cs47l63.c  audio_max9867.c  button.c  button.h  buttons.c  buttons.h  debug_gpio.h  led.c  led.h  qdec.c  qdec.h
samples/grptlk_audio_receive/src/vad/: vad.h
samples/grptlk_audio_receive/src/vad/fvad/: common.h  fvad.c
samples/grptlk_audio_receive_audio_dk/: CMakeLists.txt  Kconfig  netcore.conf  prj.conf  sysbuild.conf
samples/grptlk_audio_receive_hwn001/: CMakeLists.txt  Kconfig  prj.conf
samples/iso_broadcast/: CMakeLists.txt  Kconfig  Kconfig.sysbuild  netcore.conf  prj.conf  sysbuild.cmake
samples/iso_receive/: CMakeLists.txt  Kconfig  Kconfig.sysbuild  netcore.conf  prj.conf  sysbuild.cmake
samples/peripheral_hr/: prj.conf
tools/: README.md  flash_grptlk_audio.py
(+90 files in other folders)
